alignment fix

--- a/wp-content/themes/special/src/css/shame.css
+++ b/wp-content/themes/special/src/css/shame.css
@@ -157,14 +157,6 @@ main > article > div > footer {
   border-radius: var(--radius);
 }
 
-@supports (display: grid) {
-  @media only screen and (min-width: 48em) {
-    .post-navigation {
-      grid-column: 2 / 5;
-    }
-  }
-}
-
 .post-navigation .nav-links {
   display: flex;
   flex-wrap: wrap;
